Fix index paths(?)

--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
     <meta name="msapplication-TileImage" content="./mstile-144x144.png">
     <meta name="theme-color" content="#6080a0">
   </head>
-  <body style="margin: 0;" data-qml="./qml/index.qml">
-    <script type="text/javascript" src="./lib/fontloader/FontLoader.js"></script>
-    <script type="text/javascript" src="./lib/qmlweb/qmlweb.js"></script>
+  <body style="margin: 0;" data-qml="qml/index.qml">
+    <script type="text/javascript" src="lib/fontloader/FontLoader.js"></script>
+    <script type="text/javascript" src="lib/qmlweb/qmlweb.js"></script>
   </body>
 </html>
