Another font attempt

--- a/index.html
+++ b/index.html
@@ -23,8 +23,13 @@
     <meta name="msapplication-TileColor" content="#da532c">
     <meta name="msapplication-TileImage" content="./mstile-144x144.png">
     <meta name="theme-color" content="#6080a0">
+    <style>
+        * {
+          font-family: Verdana;
+        }
+    </style>
   </head>
-  <body style="font-family: 'Verdana';margin: 0;" data-qml="qml/index.qml">
+  <body style="margin: 0;" data-qml="qml/index.qml">
     <script type="text/javascript" src="lib/qmlweb/qmlweb.js"></script>
   </body>
 </html>
