Revert flickable experiment & add no zoom

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
     <meta name="msapplication-TileColor" content="#da532c">
     <meta name="msapplication-TileImage" content="./mstile-144x144.png">
     <meta name="theme-color" content="#6080a0">
+    <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport'>
     <style>
         * {
           font-family: Verdana;
