--- a/index.html
+++ b/index.html
@@ -25,8 +25,11 @@
     <meta name="theme-color" content="#6080a0">
     <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport'>
     <style>
+        body {
+            font-family: Arial;
+        }
         * {
-          font-family: Verdana;
+            -webkit-tap-highlight-color: rgba(255, 255, 255, 0);
         }
     </style>
   </head>
