--- a/index.html
+++ b/index.html
@@ -23,14 +23,25 @@
     <meta name="msapplication-TileColor" content="#da532c">
     <meta name="msapplication-TileImage" content="./mstile-144x144.png">
     <meta name="theme-color" content="#6080a0">
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0">
-	<link href='https://fonts.googleapis.com/css?family=Roboto&subset=latin,cyrillic' rel='stylesheet' type='text/css'>
-	<script src="modernizr-custom.js"></script>
-	
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0">
+    <link href='https://fonts.googleapis.com/css?family=Roboto&subset=latin,cyrillic' rel='stylesheet' type='text/css'>
+    <script src="modernizr-custom.js"></script>
+    <style>
+        body, html {
+            width: 100%;
+            height: 100%;
+            background-color: #6080a0;
+            display: table;
+            font-family: Arial;
+            margin: 0;
+        }
+        * {
+            -webkit-tap-highlight-color: rgba(255, 255, 255, 0);
+        }
+    </style>
 </head>
 <body style="font-family: Roboto">
-	
-	<script src="qml.index.js"></script>
+    <script src="qml.index.js"></script>
 </body>
 </html>
