--- a/404.html
+++ b/404.html
@@ -7,7 +7,7 @@ permalink: /404.html
 <div class="text-center">
   <h1>Whoops, this page doesn't exist.</h1>
   
-  <a href="{{ site.baseurl }}">
+  <a href="{{ site.url }}">
     <img src="{{ site.baseurl }}/img/situations-innershadow.png" style="padding:50px" />
   </a>
   
