--- a/privacy_policy.html
+++ b/privacy_policy.html
@@ -4,22 +4,20 @@ title: Privacy Policy
 permalink: /situations/privacy_policy.html
 ---
 
-<p>Pastilli Labs built the Situations app as a Freemium app. This SERVICE is provided by Pastilli Labs at no cost and is intended for use as is.</p>
+<p>Pastilli Labs built Situations app as a Freemium app. This SERVICE is provided by Pastilli Labs at no cost and is intended for use as is.</p>
 
-<p>This page is used to inform website visitors regarding our policies with the collection, use, and disclosure of Personal Information if anyone decided to use our Service.</p>
+<p>This page is used to inform website visitors and application users regarding our policies with the collection, use, and disclosure of Personal Information if anyone decided to use our Service.</p>
 
-<p>If you choose to use our Service, then you agree to the collection and use of information in relation to this policy. The Personal Information that we collect is used for providing and improving the Service. We will not use or share your information with anyone except as described in this Privacy Policy.</p>
-
-<p>The terms used in this Privacy Policy have the same meanings as in our Terms and Conditions, which is accessible at Situations unless otherwise defined in this Privacy Policy.</p>
+<p>If you choose to use our Service, then you agree to the collection and use of information in relation to this policy. The Personal Information that we collect is used for providing and improving the Service. We will not use, share or sell your information with anyone except as described in this Privacy Policy.</p>
 
 <p><strong>Information Collection and Use</strong></p>
 
-<p>We do not collect or transmit to third parties any personally identifiable information. All data the application has access to is processed locally by default and everything remains in full user control.</p>
+<p>Situations app or Pastilli Labs does not collect or transmit to third parties any personally identifiable information. All data the application has access to is processed locally in the device only.</p>
 
-<p>The app does use third party services that may collect information used to identify you.</p>
+<p>Any personal data, incuding location data, that the app may use to provide its functionality is not sent, shared or sold anywhere.</p>
 
 <div>
-<p>Link to privacy policy of third party service providers used by different versions of the app</p>
+<p>Links to privacy policies of third party service providers used by different versions of the app:</p>
 <ul>
 <li><a href="https://www.google.com/policies/privacy/" target="_blank">Google Play Services (Android)</a></li>
 <li><a href="https://legal.here.com/en-gb/privacy" target="_blank">HERE (Sailfish)</a></li>
@@ -35,19 +33,6 @@ permalink: /situations/privacy_policy.html
 <p>Cookies are files with small amount of data that is commonly used as an anonymous unique identifier. These are sent to your browser from the website that you visit and are stored on your device internal memory.</p>
 
 <p>This Service does not use these “cookies” explicitly. However, the app may use third party code and libraries that use “cookies” to collection information and to improve their services. You have the option to either accept or refuse these cookies and know when a cookie is being sent to your device. If you choose to refuse our cookies, you may not be able to use some portions of this Service.</p>
-
-<p><strong>Service Providers</strong></p>
-
-<p> We may employ third-party companies and individuals due to the following reasons:</p>
-
-<ul>
-<li>To facilitate our Service;</li>
-<li>To provide the Service on our behalf;</li>
-<li>To perform Service-related services; or</li>
-<li>To assist us in analyzing how our Service is used.</li>
-</ul>
-
-<p> We want to inform users of this Service that these third parties have access to your Personal Information. The reason is to perform the tasks assigned to them on our behalf. However, they are obligated not to disclose or use the information for any other purpose.</p>
 
 <p><strong>Security</strong></p>
 
